--- a/album.html
+++ b/album.html
@@ -150,7 +150,9 @@
                 <tr class="border-bottom border-secondary">
                   <th class="bg-transparent text-white-50">#</th>
                   <th class="bg-transparent text-white-50">Titolo</th>
-                  <th class="bg-transparent text-white-50 text-center">Riproduzioni</th>
+                  <th class="bg-transparent text-white-50 text-center">
+                    Riproduzioni
+                  </th>
                   <th class="bg-transparent text-white-50 text-end">
                     <i class="bi bi-clock"></i>
                   </th>
@@ -158,6 +160,95 @@
               </thead>
               <tbody id="songs-list"></tbody>
             </table>
+          </div>
+
+          <!------------------------footer prova-->
+          <div class="border-bottom">
+            <div class="container">
+              <div class="row">
+                <div class="col-12 col-md-4">
+                  <!-- COLONNA SX -->
+                  <ul class="list-unstyled mb-0 text-center py-4">
+                    <li class="mt-3 personal-list">
+                      <a
+                        href="index.html"
+                        class="text-decoration-none text-white"
+                        >Home</a
+                      >
+                    </li>
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Chi siamo</a
+                      >
+                    </li>
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Opportunità di lavoro</a
+                      >
+                    </li>
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >For the Record</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-12 col-md-4">
+                  <!-- COLONNA SX -->
+                  <ul class="list-unstyled mb-0 text-center py-4">
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white">
+                        Community</a
+                      >
+                    </li>
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Per artisti</a
+                      >
+                    </li>
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Sviluppatori</a
+                      >
+                    </li>
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Pubblicità</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-12 col-md-4">
+                  <!-- COLONNA SX -->
+                  <ul class="list-unstyled mb-0 text-center py-4">
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white"
+                        >Link utili</a
+                      >
+                    </li>
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >Assistenza</a
+                      >
+                    </li>
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >App per cellulare gratuita</a
+                      >
+                    </li>
+                    <li class="mt-3 personal-list">
+                      <a href="#" class="text-decoration-none text-white-50"
+                        >FDiritti del consumatore</a
+                      >
+                    </li>
+                  </ul>
+                  <br />
+                  <br />
+                  <br />
+                  <br />
+                </div>
+              </div>
+            </div>
           </div>
         </main>
 
